fixing search bar alignment issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,13 +21,12 @@ h1 {
 .navbar-nav li#search .search-box {
     position: absolute;
     right: 0;
-    bottom: -60px;
+    // bottom: -60px;
     width: 250px;
     padding: 10px;
-    // background: rgba(0,0,0,0.65);
 }
 
-.btn {
+.btn-tag {
     margin: 15px 5px;
     color: #fff;
     background-position: 0 -15px;
